--- a/public/css/darkmode.css
+++ b/public/css/darkmode.css
@@ -1,104 +1,1017 @@
+/* @import url('https://fonts.googleapis.com/css?family=Roboto+Mono:400,500,700');
+@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Sans:300,300i,400,400i,500,500i,600,600i,700,700i');
+@import url('https://fonts.googleapis.com/css?family=Arimo:400,400i,700,700i|Lato:300,300i,400,400i,700,700i|Noto+Sans:400,400i,700,700i|Ubuntu:300,300i,400,400i,500,500i,700,700i'); */
+
+@import url('https://fonts.googleapis.com/css?family=Roboto+Mono:300,400,500,700|Ubuntu:300,300i,400,400i,500,500i,700,700i');
+
+/*colors*/
+
 body {
-  color: #f5f5f5;
-  background: #262526;
+  color: #cecece;
+  background: #474747;
+}
+a {
+  color: #17455e;
+}
+.post-action-button {
+  color: #4f4f4f;
+}
+hr {
+  background-color: #595959;
+}
+#topNav{
+  border-bottom-color:#590909;
+  background: black;
+  box-shadow: 0px 0px 10px rgba(0,0,0,0.2);
+}
+#navTitle {
+  color: black;
+  background: #590909;
+}
+#navbarProfileImage.active {
+  border: 1px solid #900202;
+}
+#navbarProfileImage:hover {
+  border: 1px solid #590909;
+}
+#navTitle a {
+  color: #590909;
+}
+#topNav .nav-link,
+#topNav .nav-link:visited,
+#topNav .nav-link:active,
+#notificationsDropdownLink {
+  color: #adadad;
+}
+#topNav .nav-link.active {
+  color: #900202;
+}
+#notificationsDropdownLink:hover,
+#topNav .nav-link:hover {
+  color: #590909;
+}
+#topNav .dropdown-item {
+  color: #adadad;
+}
+.notifications-count {
+  background-color: #8a939b;
+}
+.userForm {
+  background: #ffffff;
+  border: 1px solid #383838;
+}
+.btn-fade {
+  background: #4f4f4f;
+  border-color: #4f4f4f;
+}
+#resultsContainer,
+#directoryResults,
+.commentsList {
+  border: 1px solid #565656;
+  background: #474747;
+}
+.commentContainer {
+	/* background: #fafafa; */
+	/* border-radius: 5px; */
+	padding: 15px;
+	/* margin-bottom: 10px; */
+	border-bottom: 1px solid #565656;
+  padding-bottom: 0px;
+}
+#postForm {
+  border-top: 1px solid #565656;
+  border-left: 1px solid #565656;
+  border-right: 1px solid #565656;
+  background: #474747;
+}
+#postForm:hover {
+  box-shadow: 0px 0px 6px rgba(0,0,0,0.2);
+}
+.content-box {
+  border-bottom: 1px solid #565656;
+}
+.content-box:hover {
+  box-shadow: 0px 0px 6px rgba(0,0,0,0.2);
+}
+.commentContainer:hover {
+    /* background: #f8f8f8; */
+    box-shadow: 0px 0px 6px rgba(0,0,0,0.2);
+}
+.replyContainer {
+  background: #1e1e1e;
+}
+.repliesContainer {
+  border-top: 1px solid #212121;
+}
+.user-list li{
+  border: 1px solid #565656;
+}
+.user-list li:hover {
+  background: #161616;
+}
+#image-preview {
+  background-color: #ffffff;
+  color: #252626;
+	border: 1px dashed #2b2c2d;
+}
+#image-preview label {
+  background-color: #2b2c2d;
+	color: #a5a5a5;
+}
+.notification-active {
+  background: #262525;
+}
+.authorLink {
+  color: #cecece;
+}
+.read-more__link-wrap {
+  color: #001833;
+}
+.switch-field label {
+	background-color: #303030;
+	color: rgba(0, 0, 0, 0.6);
+	border: 1px solid rgba(0, 0, 0, 0.2);
+	box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.2), 0 1px rgba(255, 255, 255, 0.1);
+}
+.switch-field input:checked + label {
+  background-color: #405634;
+}
+.emoji:hover {
+  border-color: #303030;
+}
+.abbreviated-content:not(.content-warning-content)::after {
+  background-image: linear-gradient(to bottom, rgba(255,255,255, 0), rgba(255,255,255, 1) 90%);
+}
+.show-more,
+.content-warning-show-more {
+  color: black !important;
+  background: #4f4f4f;
+}
+.comment-button {
+  color: #4f4f4f;
+}
+.comment-button:hover {
+  color: #002349;
+}
+.image-preview {
+  background-color: #ffffff;
+  border: 2px dashed #515151;
+}
+.post-single-image {
+  border: 1px solid #212121;
+}
+.post-single-image:hover {
+  border-color: #606060;
+}
+.image-clear {
+  background-color: #ffffff99;
+  color: #ffffff;
+}
+.image-preview {
+  background-color: #1e1e1d !important;
+}
+#nav-tabContent,
+#communitiesTabContent {
+  background: black;
+  border-left: 1px solid #252526;
+  border-right: 1px solid #252526;
+  border-bottom: 1px solid #252526;
+}
+.loader-ellips__dot {
+  background: #606060; /* change color here */
+}
+.page-load-status > * {
+  color: #606060;
+}
+#newPostsAvailable {
+  background: #4f5e4f;
+  border-left: 1px solid #565656;
+  border-right: 1px solid #565656;
+  border-top: 1px solid #565656;
+  color: #25a325;
+}
+#newPostsAvailable a{
+  color: #25a325;
+}
+.subscribed-alert {
+  color: #909090;
+}
+.subscribed-alert a{
+  color: #a3a3a3;
+}
+.mutedtext {
+  color:#c4d8e9;
+}
+
+
+#bodyContainer {
+  padding-top: 90px;
+  padding-bottom: 20px;
+}
+
+@media screen and (max-width: 768px) {
+   #bodyContainer { width: 100%; padding-left: 0px; padding-right: 0px; padding-top:70px;}
+ }
+
+@media (max-width: 575.98px) {
+  #topPostControlsRow,
+  #bottomPostControlsRow,
+  #replyControlsRow {
+    flex-direction: column;
+    align-content: flex-start;
+    align-items: flex-start !important;
+  }
+  #topPostControlsRow>div,
+  #bottomPostControlsRow>div,
+  #replyControlsRow>div {
+    margin-bottom: 5px;
+  }
+  .leftSideControls {
+    order: 1;
+  }
+  .rightSideControls {
+    order: 2;
+  }
+  #emojiWindowButton{
+    display: none;
+  }
+  .replyEmojiWindowButton{
+    display: none;
+  }
+}
+
+body {
+  font-family: 'Ubuntu', serif;
+  font-size: 96.5%;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Roboto Mono', monospace;
+  letter-spacing: -0.5px;
+}
+
+/* #topNav .nav-link {
+  font-family: 'Roboto Mono', monospace;
+  letter-spacing: -0.2px;
+} */
+
+.col-md-4 h4,
+.col-md-4 h5,
+.col-md-4 h6 {
+  font-family: 'Ubuntu', serif;
+}
+
+.post-action-button {
+  width: 60px;
+  text-align: left;
+  padding-left: 1px;
+}
+
+#authorTools > button {
+  text-align: right;
+  padding-right: 0px;
+}
+
+hr {
+  height: 1px;
+  border: 0;
 }
 
 #topNav {
-  border-bottom: 2px solid #740c0c;
-  box-shadow: 0px 0px 10px rgba(0,0,0,0.7);
-  background: #1b1b1b;
+  /*box shadow property moved to colors section*/
+  border-bottom: 2px solid;
+  padding-bottom: 0.75rem;
+  padding-top: 0.75rem;
 }
 
+/* #navTitle {
+  font-family: "Roboto Mono", monospace;
+  align-self: center;
+  color: #590909;
+  font-size: 1.6em;
+  font-weight: 500;
+} */
+
+#navTitle {
+  font-family: "Roboto Mono", monospace;
+  align-self: center;
+  font-size: 1.6em;
+  font-weight: 500;
+  display: flex;
+  width: 28px;
+  margin: 0;
+  padding: 0;
+  height: 28px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 6px;
+  padding-bottom: 5px;
+}
+
+#navbarProfileImage {
+  width: 30px;
+  height: 30px;
+  border-radius: 6px;
+  border: 1px solid transparent;
+}
+
+.screenreader-text {
+  display: none;
+}
+
+#navTitle a {
+  text-decoration: none;
+}
+
+#navbarMenuMobile {
+  justify-content: space-between;
+  width: 100%;
+}
+
+#navbarMenuDesktop {
+  justify-content: space-around;
+  margin: 0 auto;
+}
+
+#navbarMenuDesktop {
+  display: none;
+}
+
+@media (min-width: 576px) {
+  #navbarMenuMobile {
+    display: none;
+  }
+  #navbarMenuDesktop {
+    display: inline-flex;
+  }
+}
+
+#navbarMenuDesktop .nav-link,
+#navbarMenuMobile .nav-link {
+  font-size: 20px;
+  padding: 0;
+}
+
+#topNav .nav-item,
 #topNav .nav-link {
-  color: #aaa !important;
+  display: flex;
+  align-items: center;
 }
 
-#topNav .nav-link.active {
-  color: #c22121 !important;
+#topNav .nav-link,
+#topNav .nav-link:visited,
+#topNav .nav-link:active,
+#notificationsDropdownLink {
+  text-decoration: none;
 }
 
-#topNav .nav-link:hover {
-  color: #e75a5a !important;
+#topNav .dropdown-toggle::after {
+  display: none !important;
 }
 
+#topNav .dropdown-item {
+    font-size: 90%;
+}
+
+.navbar-username {
+  font-weight: 300;
+  font-size: 1.1rem;
+  margin-left: 5px;
+}
+
+.notifications-count {
+  margin-left: 5px;
+  font-size: small;
+}
+
+#bodyContainer .intro {
+  text-align: center;
+}
+
+.userForm {
+    max-width: 380px;
+    padding: 1em;
+    border-radius: 4px;
+    /*border property moved to colors section*/
+}
+
+.userForm h2 {
+  text-align: center;
+}
+
+/* .userForm .form-control {
+    width: 100%;
+    height: 2.5em;
+    border-radius: 5px;
+    border: 1px solid #595959;
+    margin-bottom: 1em;
+    padding: 5px 10px;
+    box-sizing: border-box;
+} */
+/*
+.userForm button {
+    width: 100%;
+    border: 0;
+    background: #175cf4;
+    padding: 5px;
+    height: 2.5em;
+    border-radius: 5px;
+    color: black;
+    font-weight: lighter;
+    text-transform: uppercase;
+} */
+
+
+#userHeader {
+  display: flex;
+  justify-content: space-between;
+}
+
+/* a, a:visited, a:active {
+  color: #175cf4;
+} */
+
+#topPostControlsRow,
+#bottomPostControlsRow {
+  display: none;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#replyControlsRow {
+  justify-content: space-between;
+  align-items: center;
+}
 
 #resultsContainer,
+#directoryResults,
 .commentsList {
-  border: 1px solid #0f0f0f;
-  background: #1b1b1b;
+  /*border moved to colors section*/
+  padding: 0;
 }
 
 .commentContainer {
-	border-bottom: 1px solid #0f0f0f;
+	/* background: #fafafa; */
+	/* border-radius: 5px; */
+	padding: 15px;
+	/* margin-bottom: 10px; */
+	/*border moved to colors section*/
+  padding-bottom: 0px;
 }
 
 #postForm {
-  border-top: 1px solid #0f0f0f;
-  border-left: 1px solid #0f0f0f;
-  border-right: 1px solid #0f0f0f;
-  background: #1b1b1b;
+  padding: 15px;
+  /*border moved to colors section*/
 }
 
-#postForm:hover,
-.commentContainer:hover,
-.content-box:hover {
-  box-shadow: 0px 0px 6px rgba(0,0,0,0.9);
+@media (max-width: 768px) {
+  #homeBody,
+  #userBody {
+    margin: 0;
+  }
+  #homeBody>div,
+  #userBody>div {
+    padding: 0;
+  }
 }
 
-.content-box{
-  border-bottom: 1px solid #0f0f0f;
+.content-box {
+  padding: 15px;
+  /*border moved to colors section*/
+  padding-bottom: 0px;
 }
 
-#homeBody input,
-#homeBody textarea,
-#userBody input,
-#userBody textarea {
-  background-color: #323232 !important;
-  color: #f5f5f5 !important;
-  border: 1px solid #848484 !important;
+.commentContent {
+    overflow: hidden;
+    word-wrap: break-word;
 }
 
-.authorLink {
-  color: #f5f5f5;
-}
-
-.text-muted {
-  color: #9ba0a4 !important;
-}
-
-a {
-  color: #4da5d5;
-}
-
-a:hover,
-.btn-link:hover {
-  color: #3589e3;
-}
-
-.modal {
-  color: #212121;
+.commentMetadata {
+  padding-bottom: 10px;
 }
 
 .replyContainer {
-  background: #262626;
+    display: none;
+    /* border-top: 1px solid #383838; */
+    /* margin-top: 10px; */
+    padding-top: 0px;
+    padding-bottom: 10px;
+}
+
+.replyForm {
+  padding: 0 15px 10px 15px;
 }
 
 .repliesContainer {
-  border-top: 1px solid #0f0f0f;
+	font-size: 0.9em;
+	padding-left:5px;
+  /*border moved to colors section*/
+  padding-top: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.individualReplyContainer {
+    word-wrap: break-word;
+}
+
+.user-list {
+    padding: 0;
+    margin: 0 0 10px 0;
+    list-style: none;
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+}
+
+.user-list li {
+    display: inline-block;
+    /*border moved to colors section*/
+    padding: 5px;
+    border-radius: 5px;
+    margin: 2px;
+}
+
+.user-list img {
+  width: 30px;
+  height: 30px;
+  border-radius: 4px;
+  margin: 2px;
+}
+
+.btn-group-full-width {
+  display: flex;
+}
+
+.btn-group-full-width .btn {
+  flex: 1
+}
+
+/* IMAGE UPLOAD FORM */
+
+
+#image-preview {
+  width: 260px;
+  height: 260px;
+  position: relative;
+  overflow: hidden;
+	border-radius: 5px;
+	/*border moved to colors section*/
+}
+#image-preview input {
+  line-height: 260px;
+  font-size: 260px;
+  position: absolute;
+  opacity: 0;
+  z-index: 10;
+}
+#image-preview label {
+  position: absolute;
+  z-index: 5;
+  opacity: 0.8;
+  cursor: pointer;
+  width: 200px;
+  height: 50px;
+  font-size: 20px;
+  line-height: 50px;
+  text-transform: uppercase;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  text-align: center;
+	border-radius: 5px;
+}
+
+#profileImageContainer {
+    display: flex;
+    width: 150px;
+    position: relative;
+}
+
+#profileImage {
+  width: 150px;
+  height: 150px;
+  border-radius: 10px;
+  /* border-radius: 50%; */
+}
+
+#updateImage {
+    position: absolute;
+    bottom: 22px;
+    right: 8px;
+}
+
+.postAuthorImage {
+  width: 46px;
+  height: 46px;
+  border-radius: 5px;
+  display: inline;
+  margin-right: 5px;
+}
+
+@media (min-width: 576px) {
+  #notificationsContainer {
+      min-width: 360px;
+  }
+}
+#notificationsList,
+#notificationsContainer {
+    font-size: 0.825em;
+    font-weight: 300;
+}
+
+#notificationsList strong,
+#notificationsContainer strong {
+  font-weight: 500;
+}
+
+.notification-active {
+  font-weight: 500;
+}
+
+#alertModal,
+#updateProfileModal {
+  margin-top: 90px;
+}
+
+
+.read-more__link-wrap {
+    display: block;
+    text-align: center;
+    text-decoration: underline;
+}
+
+.switch-field {
+	display: flex;
+  position: relative;
+  top: 4px;
+}
+
+.switch-field input {
+	position: absolute !important;
+	clip: rect(0, 0, 0, 0);
+	height: 1px;
+	width: 1px;
+	border: 0;
+	overflow: hidden;
+}
+
+.switch-field label {
+	font-size: 14px;
+	line-height: 1;
+	text-align: center;
+	padding: 8px 16px;
+	margin-right: -1px;
+	transition: all 0.1s ease-in-out;
+}
+
+.switch-field label:hover {
+	cursor: pointer;
+}
+
+.switch-field input:checked + label {
+	box-shadow: none;
+}
+
+.switch-field label:first-of-type {
+	border-radius: 4px 0 0 4px;
+}
+
+.switch-field label:last-of-type {
+	border-radius: 0 4px 4px 0;
+}
+
+#postContentWarningsContainer {
+  display: none;
+}
+
+#emojiWindow,
+.replyEmojiWindow {
+  display: flex;
+  cursor:default;
+  flex-direction: row;
+  justify-content: flex-start;
+}
+
+.emoji {
+  padding: 2px 0.15rem 0 0.15rem;
+  border: 1px solid transparent;
+  border-radius: 4px;
+}
+
+.content-warning {
+  font-weight: 500;
+}
+
+.abbreviated-content {
+  height: 7rem;
+  overflow: hidden;
+}
+
+.abbreviated-content:not(.content-warning-content)::after {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  bottom: 3rem;
+  left: 0;
+  pointer-events: none;
+  width: 100%;
+  height: 1rem;
+}
+
+.show-more,
+.content-warning-show-more {
+  text-transform: uppercase;
+  font-size: smaller;
+  padding: 0 5px;
+  border-radius: 4px;
+  display: block;
+  width: 100px;
+  text-align: center;
+  cursor: pointer;
+}
+
+.show-more {
+  margin: 1rem auto;
+}
+
+.content-warning-show-more {
+  margin: 0 auto 1rem auto;
+}
+/*
+.post-meta {
+  margin-left: 3px;
+  justify-content: space-between;
+  display: flex;
+  flex-direction: column;
+  overflow: none;
+  flex: 1;
+}
+
+.post-meta>p {
+  margin: 0;
+  height: 23px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  black-space: nowrap;
+  width: 90%;
+} */
+
+.comment-header,
+.post-header {
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  width: 100%;
+}
+.comment-header-row-1,
+.post-header-row-1 {
+  display: flex;
+  overflow: hidden;
+}
+.comment-header-row-1>*{
+  align-self: center;
+}
+.comment-header-divider {
+  padding: 0 5px;
+}
+.commentTimestamp {
+  black-space: nowrap;
+}
+.comment-button {
+  position: relative;
+  top: 2px;
+}
+
+.comment-button:hover {
+  text-decoration: none;
+}
+.replyToComment {
+  padding: 0 10px;
+}
+.deleteComment {
+  padding: 0;
+  flex: 1;
+  text-align: right;
+}
+.author-username {
+  black-space: nowrap;
+}
+.author-display-name {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  black-space: nowrap;
+  margin-right: 5px;
+}
+.user-flag {
+  padding: 0 5px;
+}
+.post-header .user-flag {
+  position: relative;
+  top: 3px;
+}
+
+.show-more-content {
+  display: none;
+}
+
+.custom-file-container {
+  box-sizing: border-box;
+  position: relative;
+  display: block; }
+
+.image-preview {
+  overflow: hidden;
+  box-sizing: border-box;
+  transition: all 0.2s ease;
+  margin-top: 20px;
+  margin-bottom: 40px;
+  height: 100%;
+  width: 100%;
+  border-radius: 4px;
+  background-size: contain;
+  background-position:center;
+  background-repeat: no-repeat;
+  background-image:url("/images/imagePreviewWindowDefault.jpg");
+  width: 100%;
+  /*border moved to colors*/
+  margin: 15px 0;
+  object-fit: contain;
+  border-radius: 6px;
+}
+
+#postImageUpload {
+  display: none;
+}
+
+#imagePreviewContainer {
+  display: none;
+  text-align: center;
+}
+
+.post-images {
+  /* text-align: center; */
 }
 
 .post-single-image {
-  border: 1px solid #0f0f0f;
+  max-width: 100%;
+  margin: 0 0 1rem 0;
+  /*border moved to colors*/
+  border-radius: 6px;
+  max-height: 300px;
+  object-fit: contain;
+  cursor: pointer;
 }
 
-.post-single-image:hover {
-  border: 1px solid #4b4b4b;
+.custom-file-container {
+  margin-top: 1rem !important;
+  margin-bottom: 0.5rem !important;
 }
 
-.tab-content {
-  background: #2d2d2d !important;
-  border-top: 1px solid #0f0f0f !important;
-  border-left: 1px solid #0f0f0f !important;
-  border-right: 1px solid #0f0f0f !important;
-  border-bottom: 1px solid #0f0f0f !important;
+.image-clear {
+    border-radius: 90%;
+    width: 1.5em;
+    font-size: 2em;
+    text-align: center;
+    position: absolute;
+    right: 20px;
+    top: 7px;
+}
+
+
+
+.community-container {
+  display: none;
+}
+
+#mainBody {
+  display: block;
+}
+
+.editor-container {
+  display: none;
+}
+
+#nav-tabContent,
+#communitiesTabContent {
+  /*border moved to colors*/
+  padding: 15px;
+  margin-top: 0;
+}
+
+ /* {
+  background: black;
+  padding: 15px;
+  margin-top: 0;
+  border: 1px solid #252526;
+} */
+
+#votesContainer {
+  background: #fff6f1;
+}
+
+.proposal-box>p:last-of-type {
+  margin-bottom: 0;
+}
+
+.bootbox-confirm {
+  padding-top: 60px;
+}
+
+#newCommunityForm label {
+  font-weight: bold;
+}
+
+.loader-ellips {
+  font-size: 15px; /* change size here */
+  position: relative;
+  width: 4em;
+  height: 1em;
+  margin: 10px auto;
+}
+
+.loader-ellips__dot {
+  display: block;
+  width: 1em;
+  height: 1em;
+  border-radius: 0.5em;
+  position: absolute;
+  animation-duration: 0.5s;
+  animation-timing-function: ease;
+  animation-iteration-count: infinite;
+}
+
+.loader-ellips__dot:nth-child(1),
+.loader-ellips__dot:nth-child(2) {
+  left: 0;
+}
+.loader-ellips__dot:nth-child(3) { left: 1.5em; }
+.loader-ellips__dot:nth-child(4) { left: 3em; }
+
+@keyframes reveal {
+  from { transform: scale(0.001); }
+  to { transform: scale(1); }
+}
+
+@keyframes slide {
+  to { transform: translateX(1.5em) }
+}
+
+.loader-ellips__dot:nth-child(1) {
+  animation-name: reveal;
+}
+
+.loader-ellips__dot:nth-child(2),
+.loader-ellips__dot:nth-child(3) {
+  animation-name: slide;
+}
+
+.loader-ellips__dot:nth-child(4) {
+  animation-name: reveal;
+  animation-direction: reverse;
+}
+
+.page-load-status {
+  display: none;
+}
+
+.page-load-status > * {
+    text-align: center;
+    height: 40px;
+    line-height: 40px;
+    margin-top: 20px;
+  }
+
+#newPostsAvailable,
+#checkNewPosts {
+  display: none;
+}
+
+#newPostsAvailable {
+  /*border moved to colors*/
+  font-weight: 500;
+}
+
+#commentContent {
+  font-size: 16px;
+}
+
+.booster:not(:last-of-type):after {
+    content: ', ';
+}
+
+.content-warning-images {
+    display: none;
+}
+
+.subscribed-alert {
+  font-size: 90%;
+  text-align: center;
+  margin-bottom: 1rem;
+}
+
+.subscribed-alert a{
+  font-weight: 500;
 }
