--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,6 +4,207 @@
 
 @import url('https://fonts.googleapis.com/css?family=Roboto+Mono:300,400,500,700|Ubuntu:300,300i,400,400i,500,500i,700,700i');
 
+/*colors*/
+
+body {
+  color: #1a1717;
+  background: #F9F9FA;
+}
+a {
+  color: #338fc2;
+}
+.post-action-button {
+  color: #aaa;
+}
+hr {
+  background-color: #cbcbcb;
+}
+#topNav{
+  border-bottom-color:#ce1717;
+  background: white;
+  box-shadow: 0px 0px 10px rgba(0,0,0,0.2);
+}
+#navTitle {
+  color: white;
+  background: #ce1717;
+}
+#navbarProfileImage.active {
+  border: 1px solid #900202;
+}
+#navbarProfileImage:hover {
+  border: 1px solid #ce1717;
+}
+#navTitle a {
+  color: #ce1717;
+}
+#topNav .nav-link,
+#topNav .nav-link:visited,
+#topNav .nav-link:active,
+#notificationsDropdownLink {
+  color: #666;
+}
+#topNav .nav-link.active {
+  color: #900202;
+}
+#notificationsDropdownLink:hover,
+#topNav .nav-link:hover {
+  color: #ce1717;
+}
+#topNav .dropdown-item {
+  color: #666;
+}
+.notifications-count {
+  background-color: rgb(108, 117, 125);
+}
+.userForm {
+  background: #fff;
+  border: 1px solid #e7e7e7;
+}
+.btn-fade {
+  background: #aaa;
+  border-color: #aaa;
+}
+#resultsContainer,
+#directoryResults,
+.commentsList {
+  border: 1px solid #dfdfdf;
+  background: white;
+}
+.commentContainer {
+	/* background: #fafafa; */
+	/* border-radius: 5px; */
+	padding: 15px;
+	/* margin-bottom: 10px; */
+	border-bottom: 1px solid #dfdfdf;
+  padding-bottom: 0px;
+}
+#postForm {
+  border-top: 1px solid #dfdfdf;
+  border-left: 1px solid #dfdfdf;
+  border-right: 1px solid #dfdfdf;
+  background: white;
+}
+#postForm:hover {
+  box-shadow: 0px 0px 6px rgba(0,0,0,0.2);
+}
+.content-box {
+  border-bottom: 1px solid #dfdfdf;
+}
+.content-box:hover {
+  box-shadow: 0px 0px 6px rgba(0,0,0,0.2);
+}
+.commentContainer:hover {
+    /* background: #f8f8f8; */
+    box-shadow: 0px 0px 6px rgba(0,0,0,0.2);
+}
+.replyContainer {
+  background: #f5f5f5;
+}
+.repliesContainer {
+  border-top: 1px solid #eaeaea;
+}
+.user-list li{
+  border: 1px solid #dfdfdf;
+}
+.user-list li:hover {
+  background: #f1f1f1;
+}
+#image-preview {
+  background-color: #ffffff;
+  color: #ecf0f1;
+	border: 1px dashed #ced4da;
+}
+#image-preview label {
+  background-color: #ced4da;
+	color: #555;
+}
+.notification-active {
+  background: #eeecec;
+}
+.authorLink {
+  color: #1a1717;
+}
+.read-more__link-wrap {
+  color: #007bff;
+}
+.switch-field label {
+	background-color: #e4e4e4;
+	color: rgba(0, 0, 0, 0.6);
+	border: 1px solid rgba(0, 0, 0, 0.2);
+	box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.2), 0 1px rgba(255, 255, 255, 0.1);
+}
+.switch-field input:checked + label {
+  background-color: #a5dc86;
+}
+.emoji:hover {
+  border-color: #ddd;
+}
+.abbreviated-content:not(.content-warning-content)::after {
+  background-image: linear-gradient(to bottom, rgba(255,255,255, 0), rgba(255,255,255, 1) 90%);
+}
+.show-more,
+.content-warning-show-more {
+  color: white !important;
+  background: #aaa;
+}
+.comment-button {
+  color: #aaa;
+}
+.comment-button:hover {
+  color: #0069d9;
+}
+.image-preview {
+  background-color: #fff;
+  border: 2px dashed #d5d5d5;
+}
+.post-single-image {
+  border: 1px solid #eaeaea;
+}
+.post-single-image:hover {
+  border-color: #9b9b9b;
+}
+.image-clear {
+  background-color: #ffffff99;
+  color: #000000;
+}
+.image-preview {
+  background-color: #edede8 !important;
+}
+#nav-tabContent,
+#communitiesTabContent {
+  background: white;
+  border-left: 1px solid #dee2e6;
+  border-right: 1px solid #dee2e6;
+  border-bottom: 1px solid #dee2e6;
+}
+.loader-ellips__dot {
+  background: #ababab; /* change color here */
+}
+.page-load-status > * {
+  color: #ababab;
+}
+#newPostsAvailable {
+  background: #efffef;
+  border-left: 1px solid #dfdfdf;
+  border-right: 1px solid #dfdfdf;
+  border-top: 1px solid #dfdfdf;
+  color: #196919;
+}
+#newPostsAvailable a{
+  color: #196919;
+}
+.subscribed-alert {
+  color: #909090;
+}
+
+.subscribed-alert a{
+  color: #6f6f6f;
+}
+.mutedtext {
+  color:#6c757d;
+}
+
+
 #bodyContainer {
   padding-top: 90px;
   padding-bottom: 20px;
@@ -42,9 +243,7 @@
 
 body {
   font-family: 'Ubuntu', serif;
-  color: #1a1717;
   font-size: 96.5%;
-  background: #F9F9FA;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -63,12 +262,7 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'Ubuntu', serif;
 }
 
-a {
-  color: #338fc2;
-}
-
 .post-action-button {
-  color: #aaa;
   width: 60px;
   text-align: left;
   padding-left: 1px;
@@ -82,13 +276,11 @@ a {
 hr {
   height: 1px;
   border: 0;
-  background-color: #cbcbcb;
 }
 
 #topNav {
-  border-bottom: 2px solid #ce1717;
-  box-shadow: 0px 0px 10px rgba(0,0,0,0.2);
-  background: white;
+  /*box shadow property moved to colors section*/
+  border-bottom: 2px solid;
   padding-bottom: 0.75rem;
   padding-top: 0.75rem;
 }
@@ -104,10 +296,8 @@ hr {
 #navTitle {
   font-family: "Roboto Mono", monospace;
   align-self: center;
-  color: white;
   font-size: 1.6em;
   font-weight: 500;
-  background: #ce1717;
   display: flex;
   width: 28px;
   margin: 0;
@@ -126,21 +316,12 @@ hr {
   border: 1px solid transparent;
 }
 
-#navbarProfileImage.active {
-  border: 1px solid #900202;
-}
-
-#navbarProfileImage:hover {
-  border: 1px solid #ce1717;
-}
-
 .screenreader-text {
   display: none;
 }
 
 #navTitle a {
   text-decoration: none;
-  color: #ce1717;
 }
 
 #navbarMenuMobile {
@@ -183,16 +364,6 @@ hr {
 #topNav .nav-link:active,
 #notificationsDropdownLink {
   text-decoration: none;
-  color: #666;
-}
-
-#topNav .nav-link.active {
-  color: #900202;
-}
-
-#notificationsDropdownLink:hover,
-#topNav .nav-link:hover {
-  color: #ce1717;
 }
 
 #topNav .dropdown-toggle::after {
@@ -200,7 +371,6 @@ hr {
 }
 
 #topNav .dropdown-item {
-    color: #666;
     font-size: 90%;
 }
 
@@ -213,7 +383,6 @@ hr {
 .notifications-count {
   margin-left: 5px;
   font-size: small;
-  background-color: rgb(108, 117, 125);
 }
 
 #bodyContainer .intro {
@@ -221,17 +390,10 @@ hr {
 }
 
 .userForm {
-    background: #fff;
     max-width: 380px;
     padding: 1em;
     border-radius: 4px;
-    border: 1px solid #e7e7e7;
-    margin: 1em auto;
-}
-
-.btn-fade {
-  background: #aaa;
-  border-color: #aaa;
+    /*border property moved to colors section*/
 }
 
 .userForm h2 {
@@ -285,9 +447,8 @@ hr {
 #resultsContainer,
 #directoryResults,
 .commentsList {
-  border: 1px solid #dfdfdf;
+  /*border moved to colors section*/
   padding: 0;
-  background: white;
 }
 
 .commentContainer {
@@ -295,16 +456,13 @@ hr {
 	/* border-radius: 5px; */
 	padding: 15px;
 	/* margin-bottom: 10px; */
-	border-bottom: 1px solid #dfdfdf;
+	/*border moved to colors section*/
   padding-bottom: 0px;
 }
 
 #postForm {
-  border-top: 1px solid #dfdfdf;
   padding: 15px;
-  border-left: 1px solid #dfdfdf;
-  border-right: 1px solid #dfdfdf;
-  background: white;
+  /*border moved to colors section*/
 }
 
 @media (max-width: 768px) {
@@ -318,24 +476,12 @@ hr {
   }
 }
 
-#postForm:hover {
-    box-shadow: 0px 0px 6px rgba(0,0,0,0.2);
-}
-
 .content-box {
   padding: 15px;
-  border-bottom: 1px solid #dfdfdf;
+  /*border moved to colors section*/
   padding-bottom: 0px;
 }
 
-.content-box:hover {
-  box-shadow: 0px 0px 6px rgba(0,0,0,0.2);
-}
-
-.commentContainer:hover {
-    /* background: #f8f8f8; */
-    box-shadow: 0px 0px 6px rgba(0,0,0,0.2);
-}
 .commentContent {
     overflow: hidden;
     word-wrap: break-word;
@@ -347,7 +493,6 @@ hr {
 
 .replyContainer {
     display: none;
-    background: #f5f5f5;
     /* border-top: 1px solid #e7e7e7; */
     /* margin-top: 10px; */
     padding-top: 0px;
@@ -361,7 +506,7 @@ hr {
 .repliesContainer {
 	font-size: 0.9em;
 	padding-left:5px;
-  border-top: 1px solid #eaeaea;
+  /*border moved to colors section*/
   padding-top: 20px;
   padding-left: 20px;
   padding-right: 20px;
@@ -382,13 +527,10 @@ hr {
 
 .user-list li {
     display: inline-block;
-    border: 1px solid #dfdfdf;
+    /*border moved to colors section*/
     padding: 5px;
     border-radius: 5px;
     margin: 2px;
-}
-.user-list li:hover {
-    background: #f1f1f1;
 }
 
 .user-list img {
@@ -414,10 +556,8 @@ hr {
   height: 260px;
   position: relative;
   overflow: hidden;
-  background-color: #ffffff;
-  color: #ecf0f1;
 	border-radius: 5px;
-	border: 1px dashed #ced4da;
+	/*border moved to colors section*/
 }
 #image-preview input {
   line-height: 260px;
@@ -431,8 +571,6 @@ hr {
   z-index: 5;
   opacity: 0.8;
   cursor: pointer;
-  background-color: #ced4da;
-	color: #555;
   width: 200px;
   height: 50px;
   font-size: 20px;
@@ -492,7 +630,6 @@ hr {
 
 .notification-active {
   font-weight: 500;
-  background: #eeecec;
 }
 
 #alertModal,
@@ -500,14 +637,10 @@ hr {
   margin-top: 90px;
 }
 
-.authorLink {
-  color: #1a1717;
-}
 
 .read-more__link-wrap {
     display: block;
     text-align: center;
-    color: #007bff;
     text-decoration: underline;
 }
 
@@ -527,15 +660,11 @@ hr {
 }
 
 .switch-field label {
-	background-color: #e4e4e4;
-	color: rgba(0, 0, 0, 0.6);
 	font-size: 14px;
 	line-height: 1;
 	text-align: center;
 	padding: 8px 16px;
 	margin-right: -1px;
-	border: 1px solid rgba(0, 0, 0, 0.2);
-	box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.2), 0 1px rgba(255, 255, 255, 0.1);
 	transition: all 0.1s ease-in-out;
 }
 
@@ -544,7 +673,6 @@ hr {
 }
 
 .switch-field input:checked + label {
-	background-color: #a5dc86;
 	box-shadow: none;
 }
 
@@ -574,10 +702,6 @@ hr {
   border-radius: 4px;
 }
 
-.emoji:hover {
-  border-color: #ddd;
-}
-
 .content-warning {
   font-weight: 500;
 }
@@ -594,7 +718,6 @@ hr {
   bottom: 3rem;
   left: 0;
   pointer-events: none;
-  background-image: linear-gradient(to bottom, rgba(255,255,255, 0), rgba(255,255,255, 1) 90%);
   width: 100%;
   height: 1rem;
 }
@@ -603,8 +726,6 @@ hr {
 .content-warning-show-more {
   text-transform: uppercase;
   font-size: smaller;
-  color: white !important;
-  background: #aaa;
   padding: 0 5px;
   border-radius: 4px;
   display: block;
@@ -661,13 +782,11 @@ hr {
   white-space: nowrap;
 }
 .comment-button {
-  color: #aaa;
   position: relative;
   top: 2px;
 }
 
 .comment-button:hover {
-  color: #0069d9;
   text-decoration: none;
 }
 .replyToComment {
@@ -716,10 +835,9 @@ hr {
   background-size: contain;
   background-position:center;
   background-repeat: no-repeat;
-  background-color: #fff;
   background-image:url("/images/imagePreviewWindowDefault.jpg");
   width: 100%;
-  border: 2px dashed #d5d5d5;
+  /*border moved to colors*/
   margin: 15px 0;
   object-fit: contain;
   border-radius: 6px;
@@ -741,15 +859,11 @@ hr {
 .post-single-image {
   max-width: 100%;
   margin: 0 0 1rem 0;
-  border: 1px solid #eaeaea;
+  /*border moved to colors*/
   border-radius: 6px;
   max-height: 300px;
   object-fit: contain;
   cursor: pointer;
-}
-
-.post-single-image:hover {
-  border-color: #9b9b9b;
 }
 
 .custom-file-container {
@@ -758,8 +872,6 @@ hr {
 }
 
 .image-clear {
-    background-color: #ffffff99;
-    color: #000000;
     border-radius: 90%;
     width: 1.5em;
     font-size: 2em;
@@ -767,10 +879,6 @@ hr {
     position: absolute;
     right: 20px;
     top: 7px;
-}
-
-.image-preview {
-  background-color: #edede8 !important;
 }
 
 
@@ -789,12 +897,9 @@ hr {
 
 #nav-tabContent,
 #communitiesTabContent {
-  background: white;
+  /*border moved to colors*/
   padding: 15px;
   margin-top: 0;
-  border-left: 1px solid #dee2e6;
-  border-right: 1px solid #dee2e6;
-  border-bottom: 1px solid #dee2e6;
 }
 
  /* {
@@ -833,7 +938,6 @@ hr {
   width: 1em;
   height: 1em;
   border-radius: 0.5em;
-  background: #ababab; /* change color here */
   position: absolute;
   animation-duration: 0.5s;
   animation-timing-function: ease;
@@ -876,7 +980,6 @@ hr {
 
 .page-load-status > * {
     text-align: center;
-    color: #ababab;
     height: 40px;
     line-height: 40px;
     margin-top: 20px;
@@ -888,16 +991,8 @@ hr {
 }
 
 #newPostsAvailable {
-  background: #efffef;
-  border-left: 1px solid #dfdfdf;
-  border-right: 1px solid #dfdfdf;
-  border-top: 1px solid #dfdfdf;
-  color: #196919;
+  /*border moved to colors*/
   font-weight: 500;
-}
-
-#newPostsAvailable a{
-  color: #196919;
 }
 
 #commentContent {
@@ -915,11 +1010,9 @@ hr {
 .subscribed-alert {
   font-size: 90%;
   text-align: center;
-  color: #909090;
   margin-bottom: 1rem;
 }
 
 .subscribed-alert a{
-  color: #6f6f6f;
   font-weight: 500;
 }
